--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,3 @@
 PORT = 8000
-MONGODB_URI = mongodb+srv://nirjajoshi01:<nirja123>@cluster0.wxpnt.mongodb.net
+MONGODB_URI = mongodb+srv://nirjajoshi01:nirja123@cluster0.wxpnt.mongodb.net
+CORS_ORIGIN=*
