--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.3.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
