--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
+    "@angular/common": "^18.2.6",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
+    "@angular/forms": "^17.3.12",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
-    "@angular/router": "^17.3.0",
+    "@angular/router": "^17.3.12",
     "@angular/ssr": "^17.3.9",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
