--- a/backend/package.json
+++ b/backend/package.json
@@ -19,15 +19,22 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.5.0",
+    "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "multer": "^1.4.5-lts.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pino": "^9.5.0"
   }
 }
