--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "openai": "^4.67.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
