--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,15 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.1",
+    "@huggingface/inference": "^2.8.1",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
